# serializationlib

./: CMakeLists.txt  CMakeLists.txt.init  library.json
cmake/: serializationlibConfig.cmake.in  serializationlib_pre_build.cmake
serializationlib_scripts/: serializationlib_execute_scripts.py  serializationlib_pre_build.py
serializationlib_scripts/serializationlib_core/: get_std_file_discovery.py  serializationlib_get_client_files.py
serializationlib_scripts/serializationlib_serializer/: 00_process_serializable_classes.py  S1_check_dto_macro.py  S2_extract_dto_fields.py  S3_inject_serialization.py  S4_check_notnull_macro.py  S5_check_notblank_macro.py  S6_discover_validation_macros.py  S7_extract_validation_fields.py  S8_handle_enum_serialization.py
src/: NayanSerializer.h  SerializationUtility.h  ValidationIncludes.h  ValidationUtility.h
